--- a/api/.env.example
+++ b/api/.env.example
@@ -2,6 +2,9 @@
 PORT=3000
 NODE_ENV=development
 
+# Frontend Configuration
+FRONTEND_URL=http://localhost:5173
+
 # Database Configuration
 DB_HOST=localhost
 DB_USER=root
